--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="K5tQ5zmqZ0Rv4m0PkTaGQjx-f8CtHIPWqfYE5tIARTs" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deccan Club of Ireland | Bridging Cultures, Building Futures</title>
@@ -2321,4 +2322,5 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
