--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="K5tQ5zmqZ0Rv4m0PkTaGQjx-f8CtHIPWqfYE5tIARTs" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deccan Club of Ireland | Bridging Cultures, Building Futures</title>
+    <title>Deccan Club Ireland | Bridging Cultures, Building Futures</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
@@ -2322,5 +2322,6 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
