--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {
 /* ==================== HEADER STYLES ==================== */
 header {
     background: 
-                url('new dci logo (1).png') center/cover no-repeat;
+                url('deccan_club_shifted.png') center/cover no-repeat;
     color: white;
     padding: 2rem 1rem;
     text-align: center;
@@ -2322,6 +2322,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
 
