--- a/index.html
+++ b/index.html
@@ -2257,8 +2257,8 @@ External links may appear on our site. DCI is not responsible for the privacy pr
                 <p>The Deccan Club of Ireland bridges cultures between the Deccan region of India and Ireland through cultural exchange, business collaboration, and community development.</p>
                 <div class="footer-social-links">
                     <a href="https://www.facebook.com/HyderabadisInIreland/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://x.com/DeccanClub2005" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/deccanclubofireland/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/DeccanClub" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/deccanclubofireland05/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
@@ -2322,6 +2322,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
 
