--- a/ayah of the day.html
+++ b/ayah of the day.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #2E7D32;
-            --secondary-color: #4CAF50;
-             --text-color: #333;
-          --light-gray: #f5f5f5;
-  --medium-gray: #e0e0e0;
-  --dark-gray: #757575;
+            --primary-color: #2A5885;
+            --secondary-color: #2A5885;
+            --text-color:#2A5885;
+            --light-gray: #f5f5f5;
+            --medium-gray: #e0e0e0;
+            --dark-gray: #2A5885;
         }
 
         body {
@@ -191,6 +191,8 @@
         }
     </style>
 </head>
+ <a href="index.html" class="back-btn">
+                <i class="fas fa-arrow-left"></i> Back
 <body>
     <div class="ayah-container">
         <h1 style="text-align: center; color: var(--primary-color);">Ayah of the Day</h1>
@@ -538,5 +540,4 @@
         setMidnightRefresh();
     </script>
 </body>
-
 </html>
