Update ayah of the day.html

--- a/ayah of the day.html
+++ b/ayah of the day.html
@@ -190,11 +190,12 @@
             }
         }
     </style>
+    <a href="" class="back-btn">
+                <i class="fas fa-arrow-left"></i> Back
 </head>
 
 <body>
-     <a href="index.html" class="back-btn">
-                <i class="fas fa-arrow-left"></i> Back
+     
     <div class="ayah-container">
         <h1 style="text-align: center; color: var(--primary-color);">Ayah of the Day</h1>
         
@@ -542,4 +543,5 @@
     </script>
 </body>
 </html>
+
 
