Update ayah of the day.html

--- a/ayah of the day.html
+++ b/ayah of the day.html
@@ -190,8 +190,7 @@
             }
         }
     </style>
-    <a href="" class="back-btn">
-                <i class="fas fa-arrow-left"></i> Back
+  <a href="index.html" class="back-btn">← Back to Home</a>
 </head>
 
 <body>
@@ -543,5 +542,6 @@
     </script>
 </body>
 </html>
+
 
 
