--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body {
 /* ==================== HEADER STYLES ==================== */
 header {
     background: 
-                url('deccan_club_shifted.png') center/cover no-repeat;
-    color: white;
+                url('' ) center/cover no-repeat;
+    color: rgb(255, 253, 223);
     padding: 2rem 1rem;
     text-align: center;
     min-height: 80vh;
@@ -67,9 +67,10 @@ header {
     justify-content: center;
     align-items: center;
     position: relative;
-    box-shadow: 0 4px 20px rgba(240, 238, 238, 0.2);
 }
-
+body {
+  background-color: #fffee3;
+}
 .header-container {
     width: 100%;
     max-width: 1200px;
@@ -1436,11 +1437,9 @@ footer::before {
 <body>
     <!-- ==================== ENHANCED HEADER ==================== -->
     <header>
-        <div class="header-container">
-            <img src="" alt="" class="logo">
-            <h1 class="header-title"> <span></span></h1>
-            <p class="header-tagline"></p>
-        </div>
+        <img width="100%" src="images/new dci logo (4).png" alt="header">
+    </header>
+    
     </header>
     
     <!-- ==================== REST OF YOUR EXISTING HTML ==================== -->
@@ -2322,6 +2321,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
 
