--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@ footer::before {
 <body>
     <!-- ==================== ENHANCED HEADER ==================== -->
     <header>
-        <img width="100%" src="deccan_club_shifted.jpg" alt="header">
+        <img width="100%" src="deccan_club_shifted.png" alt="header">
     </header>
     
     </header>
@@ -2321,6 +2321,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
 
