--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@ footer::before {
 <body>
     <!-- ==================== ENHANCED HEADER ==================== -->
     <header>
-<img width="100%" src="images/new dci logo (4).png" alt="" >
+<img width="100%" src="new dci logo (4).png" alt="" >
        </header>
     
     <!-- ==================== REST OF YOUR EXISTING HTML ==================== -->
@@ -2321,4 +2321,5 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
