--- a/index.html
+++ b/index.html
@@ -2292,7 +2292,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
                 <h3>Contact Us</h3>
                 <div class="footer-contact-item">
                     <div class="footer-contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                    <div>123 O'Connell Street, Dublin 1, Ireland</div>
+                    <div>Blanchardstown D15</div>
                 </div>
                 <div class="footer-contact-item">
                     <div class="footer-contact-icon"><i class="fas fa-phone"></i></div>
@@ -2321,5 +2321,6 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
