--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@ footer::before {
                
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="magazines.html">Magazines</a></li>
-                <li><a href="test.html">Ayah of the Day</a></li>
+                <li><a href="ayah of the day.html">Ayah of the Day</a></li>
             </ul>
         </div>
     </nav>
@@ -2321,6 +2321,7 @@ External links may appear on our site. DCI is not responsible for the privacy pr
     </footer>
 </body>
 </html>
+
 
 
 
